Added New Project, Redid Projects Component

--- a/EscapeAlexBank.html
+++ b/EscapeAlexBank.html
@@ -37,12 +37,13 @@
                 <div class="nested-dropdown-content nested-dropdown-software">
                   <a href="RiotStatsProject.html">LoL Stats Tool</a>
                   <a href="TicTacToeProject.html">TicTacToe Variats GUI</a>
+                  <a href="bingoGenerator.html">Custom Bingo Generator</a>
                 </div>
               </div>
             </div>
           </li>
           <li><a href="images/Jason Chen - Resume (5_26_2024).pdf" target="_blank">Resume</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
           <i class="fa-solid fa-bars" onclick="closeMenu()"></i>
         </ul>
         <i class="fa-solid fa-bars" onclick="openMenu()"></i>
@@ -67,28 +68,28 @@
             </div>
 
             <div class="project-col-2">
+              <h2 class="team-members"><b>Team:</b> Pablo Acosta, Zander Day, Scott Vagnini, Charles Weiller, Jacob Berman
+              </h2>
+              <h2 class="role">
+                  <b>Role:</b> Programmer
+              </h2>
+              <h3 class="updated">Last Updated: January 22, 2024</h3>
+                <h3 class="project-links">Links(s): <a href="https://carkol.itch.io/escapealexbank" target="_blank">itch.io</a></h3>
                 <h1>Description</h1>
-                <h3 class="main-description">
-                    Escape Alex Bank is a prison escape 2D platformer. Escape Alex Bank within the allocated 5 minute timer while dodging guards and lasers. The player will have to collect keycards to open doors.<br>This game was made for the Clark University IGDA's 48 Hour January 2024 Game Jam with a theme of 'Escape'.
-                </h3>
-
-                <h2 class="team-members"><b>Team:</b> Pablo Acosta, Zander Day, Scott Vagnini, Charles Weiller, Jacob Berman
-                </h2>
-                <h2 class="role">
-                    <b>Role:</b> Programmer
-                </h2>
-
-                <h1>Contributions</h1>
-                <h3 class="contributions">
-                    - Main programmer on the project<br><br>
-                    - Programmed a dash and implemented a death sound effect <br><br>
-                    - Programmed lasers that would turn on and off with some of them being on slightly random intervals<br><br>
-                </h3>
+              <h3 class="main-description">
+                  Escape Alex Bank is a prison escape 2D platformer. Escape Alex Bank within the allocated 5 minute timer while dodging guards and lasers. The player will have to collect keycards to open doors.<br>This game was made for the Clark University IGDA's 48 Hour January 2024 Game Jam with a theme of 'Escape'.
+              </h3>
+              <h1>Contributions</h1>
+              <h3 class="contributions">
+                  - Main programmer on the project<br>
+                  - Programmed a dash and implemented a death sound effect <br>
+                  - Programmed lasers that would turn on and off with some of them being on slightly random intervals<br>
+              </h3>
             </div>
         </div>
     </div>
 
-    <div class="footer">
+    <div class="footer-project">
         <p>Made with <i class="fa-solid fa-heart"></i> by Jason Chen </p>
     </div>
     <script>
