--- a/RiotStatsProject.html
+++ b/RiotStatsProject.html
@@ -37,12 +37,13 @@
                 <div class="nested-dropdown-content nested-dropdown-software">
                   <a href="RiotStatsProject.html">LoL Stats Tool</a>
                   <a href="TicTacToeProject.html">TicTacToe Variats GUI</a>
+                  <a href="bingoGenerator.html">Custom Bingo Generator</a>
                 </div>
               </div>
             </div>
           </li>
           <li><a href="images/Jason Chen - Resume (5_26_2024).pdf" target="_blank">Resume</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
           <i class="fa-solid fa-bars" onclick="closeMenu()"></i>
         </ul>
         <i class="fa-solid fa-bars" onclick="openMenu()"></i>
@@ -68,27 +69,24 @@
             </div>
 
             <div class="project-col-2">
-                <h1>Description</h1>
-                <h3 class="main-description">
-                    This project utilizes the Riot Games API with python to find the stats of a inputed Riot ID. It will average out common stats for a user defined amount of games. There are plans to create an app from this with a GUI and an easier way to save the data.<br>This game was created for my CSCI120 class as the final project. It was utlized by the Clark University League of Legends team and will continue to be developed.
-                </h3>
-
-                <h2 class="team-members"><b>Team:</b> N/A
-                </h2>
-                <h2 class="role">
-                    <b>Role:</b> Programmer
-                </h2>
-
-                <h1>Contributions</h1>
-                <h3 class="contributions">
-                    - Used Python to access the Riot Games API then pulled data from matches by calling to it<br>
-                    - Utilized the Pandas Library to create a database that I can easily import to Google Sheets<br>
-                </h3>
+              <h2>Solo Project</h2>
+              <h2>Role: Programmer</h2>
+              <h3 class="updated">Last Updated: June 12, 2024</h3>
+              <h3 class="project-links">Link(s): Github Link Coming Soon
+              <h1>Description</h1>
+              <h3 class="main-description">
+                  This project utilizes the Riot Games API with python to find the stats of a inputed Riot ID. It will average out common stats for a user defined amount of games. There are plans to create an app from this with a GUI and an easier way to save the data.<br>This game was created for my CSCI120 class as the final project. It was utlized by the Clark University League of Legends team and will continue to be developed.
+              </h3>
+              <h1>Contributions</h1>
+              <h3 class="contributions">
+                  - Used Python to access the Riot Games API then pulled data from matches by calling to it<br>
+                  - Utilized the Pandas Library to create a database that I can easily import to Google Sheets<br>
+              </h3>
             </div>
         </div>
     </div>
 
-    <div class="footer">
+    <div class="footer-project">
         <p>Made with <i class="fa-solid fa-heart"></i> by Jason Chen </p>
     </div>
     <script>
