--- a/TicTacToeProject.html
+++ b/TicTacToeProject.html
@@ -37,12 +37,13 @@
                 <div class="nested-dropdown-content nested-dropdown-software">
                   <a href="RiotStatsProject.html">LoL Stats Tool</a>
                   <a href="TicTacToeProject.html">TicTacToe Variats GUI</a>
+                  <a href="bingoGenerator.html">Custom Bingo Generator</a>
                 </div>
               </div>
             </div>
           </li>
           <li><a href="images/Jason Chen - Resume (5_26_2024).pdf" target="_blank">Resume</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
           <i class="fa-solid fa-bars" onclick="closeMenu()"></i>
         </ul>
         <i class="fa-solid fa-bars" onclick="openMenu()"></i>
@@ -69,28 +70,27 @@
             </div>
 
             <div class="project-col-2">
-                <h1>Description</h1>
-                <h3 class="main-description">
-                    This project creates a GUI using the Java Swing Library to play tic tac toe gamemodes. You are able to play regular tic tac toe, ultimate tic tac toe, against an unbeatable AI, and a 3-at-a-time tic tac toe. A version I came up with in my freshman year of high school. This project stemmed from being bored in my junior year high school computer science class and has since added a GUI and other modes.
-                </h3>
-
-                <h2 class="team-members"><b>Team:</b> N/A
-                </h2>
-                <h2 class="role">
-                    <b>Role:</b> Programmer
-                </h2>
-
-                <h1>Contributions</h1>
-                <h3 class="contributions">
-                    - Programmed a simple TicTacToe game <br><br>
-                    - Programmed the GUI using Java Swing to make it playable outside the terminal <br><br>
-                    - Learned the minimax algorithm for the impossible AI <br><br>
-                </h3>
+              <h2><b>Solo Project</b></h2>
+              <h2>
+                <b>Role:</b> Programmer
+              </h2>
+              <h3 class="updated">Last Updated: June 25, 2024</h3>
+              <h3 class="project-links">Link(s): Github Link Coming Soon
+              <h1>Description</h1>
+              <h3 class="main-description">
+                  This project creates a GUI using the Java Swing Library to play tic tac toe gamemodes. You are able to play regular tic tac toe, ultimate tic tac toe, against an unbeatable AI, and a 3-at-a-time tic tac toe. A version I came up with in my freshman year of high school. This project stemmed from being bored in my junior year high school computer science class and has since added a GUI and other modes.
+              </h3>
+              <h1>Contributions</h1>
+              <h3 class="contributions">
+                  - Programmed a simple TicTacToe game <br>
+                  - Programmed the GUI using Java Swing to make it playable outside the terminal <br>
+                  - Learned the minimax algorithm for the impossible AI <br>
+              </h3>
             </div>
         </div>
     </div>
 
-    <div class="footer">
+    <div class="footer-project">
         <p>Made with <i class="fa-solid fa-heart"></i> by Jason Chen </p>
     </div>
     <script>
