--- a/about.html
+++ b/about.html
@@ -37,6 +37,7 @@
                 <div class="nested-dropdown-content nested-dropdown-software">
                   <a href="RiotStatsProject.html">LoL Stats Tool</a>
                   <a href="TicTacToeProject.html">TicTacToe Variats GUI</a>
+                  <a href="bingoGenerator.html">Custom Bingo Generator</a>
                 </div>
               </div>
             </div>
