--- a/bellicose.html
+++ b/bellicose.html
@@ -37,12 +37,13 @@
                 <div class="nested-dropdown-content nested-dropdown-software">
                   <a href="RiotStatsProject.html">LoL Stats Tool</a>
                   <a href="TicTacToeProject.html">TicTacToe Variats GUI</a>
+                  <a href="bingoGenerator.html">Custom Bingo Generator</a>
                 </div>
               </div>
             </div>
           </li>
           <li><a href="images/Jason Chen - Resume (5_26_2024).pdf" target="_blank">Resume</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
           <i class="fa-solid fa-bars" onclick="closeMenu()"></i>
         </ul>
         <i class="fa-solid fa-bars" onclick="openMenu()"></i>
@@ -67,28 +68,28 @@
             </div>
 
             <div class="project-col-2">
+              <h2 class="team-members"><b>Team:</b> Blake Shea, Sean McDowell, Anthony Pansenko, Liam Quinn
+              </h2>
+              <h2 class="role">
+                Role: Programmer, UI/UX
+              </h2>
+              <h3 class="updated">Last Updated: April 13, 2024</h3>
+                <h3 class="project-links">Link(s): Itch.io link coming soon
                 <h1>Description</h1>
                 <h3 class="main-description">
                     Bellicose is a 2D fighting game utilizing a pixel art style and implements typical fighting game mechanics such as different height blocks/attacks, staggering attacks, different special abilities between characters, and more to pit two players against each other in a skill based combat system.<br>This game was created for the Clark University IGDA Feburary Game Jam with the theme "Retro"
-                </h3>
-
-                <h2 class="team-members"><b>Team:</b> Blake Shea, Sean McDowell, Anthony Pansenko, Liam Quinn
-                </h2>
-                <h2 class="role">
-                    <b>Role:</b> Programmer, UI/UX
-                </h2>
-
+                </h3>    
                 <h1>Contributions</h1>
                 <h3 class="contributions">
-                    - Programmed and created a unique character select UI <br><br>
-                    - Programmed the timer, health bar, and random background clouds <br><br>
-                    - Implemented all character animations using a state machine <br><br>
+                    - Programmed and created a unique character select UI <br>
+                    - Programmed the timer, health bar, and random background clouds <br>
+                    - Implemented all character animations using a state machine <br>
                 </h3>
             </div>
         </div>
     </div>
 
-    <div class="footer">
+    <div class="footer-project">
         <p>Made with <i class="fa-solid fa-heart"></i> by Jason Chen </p>
     </div>
     <script>
