--- a/bingoGenerator.html
+++ b/bingoGenerator.html
@@ -47,19 +47,21 @@
           <i class="fa-solid fa-bars" onclick="closeMenu()"></i>
         </ul>
         <i class="fa-solid fa-bars" onclick="openMenu()"></i>
-      </nav>  
+      </nav>
     </div>
 
     <div class="project">
         <div class="project-container">
             <div class="project-col-1">
-                <h1 class="sub-title">Sunnyside Travels</h1>
-                <h3 class="sub-description">Travel and explore the world!</h3>
+                <h1 class="sub-title">Custom Bingo Generator</h1>
+                <h3 class="sub-description">Create your own bingo board!</h3>
                 <div class="gallery-container">
                     <div class="gallery-wrapper">
-                      <div class="image-container-unreleased">
-                        <img src="images/sunnyside-travels-temp.png" alt="sunnyside travels temp image">
+                      <div class="image-container">
                         <!-- Add more images as needed -->
+                        <img src="images/bingo main page.png" alt="Bingo Generator Home">
+                        <img src="images/bingo_selected_example.png" alt="Bingo Selected Example">
+                        <img src="images/custom_bingo_example.png" alt="Custom Bingo Options Example">
                       </div>
                     </div>
                     <button class="prev" onclick="scrollImages(-1)">&#10094;</button>
@@ -68,24 +70,25 @@
             </div>
 
             <div class="project-col-2">
-              <h2 class="team-members"><b>Team:</b> TBD
-              </h2>
-              <h2 class="role">
-                  <b>Role:</b> Programmer
-              </h2>
-              <h3 class="updated">Last Updated: July 2, 2024</h3>
-              <h3 class="project-links">Link(s): Game Work In Progress
-              <h1>Description</h1>
-              <h3 class="main-description">
-                  Sunnyside Travels is a top-down 2D RPG based on my friends who traveled the world in the late half of 2023. Follow their adventures as they make their way through Europe and Asia. Learn about their personalities and traits. Explore major landmarks such as the Eiffel Tower, Seoul Sky Tower, Shibuya Crossing, and many more!
-              </h3>
-
-              <h1>Contributions</h1>
-              <h3 class="contributions">
-                  - Sole Developer on the project as of right now
-              </h3>
+                <h2><b>Solo Project</b></h2>
+                <h2>
+                    <b>Role:</b> Programmer
+                </h2>
+                <h3 class="updated">Last Updated: July 2, 2024</h3>
+                <h3 class="project-links">Link(s): <a href="https://github.com/jychen0/custom-bingo-board-generator" target="_blank">github</a></h3>
+                <h1>Description</h1>
+                <h3 class="main-description">
+                    This project utilizes React.js and CSS to create a site that can generate a custom bingo board by inserting your own spaces. There are small popups in case the space is too detailed to fit inside the bingo square. You are able to click on each individual space to mark it, with the middle space always being a "free space". Future updates could include making it mobile friendly.
+                </h3>
+                <h1 class="contributions-title">Contributions</h1>
+                    <h3 class="contributions">
+                        - Designed the layout for a site that creates custom bingo boards <br>
+                        - Programmed the functionality using React.js <br>
+                        - Learned to connect a .txt file to javascript allowing me to have default values for the bingo board <br>
+                    </h3>
             </div>
         </div>
+        
     </div>
 
     <div class="footer-project">
