--- a/dontfeedduck.html
+++ b/dontfeedduck.html
@@ -37,12 +37,13 @@
                 <div class="nested-dropdown-content nested-dropdown-software">
                   <a href="RiotStatsProject.html">LoL Stats Tool</a>
                   <a href="TicTacToeProject.html">TicTacToe Variats GUI</a>
+                  <a href="bingoGenerator.html">Custom Bingo Generator</a>
                 </div>
               </div>
             </div>
           </li>
           <li><a href="images/Jason Chen - Resume (5_26_2024).pdf" target="_blank">Resume</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
           <i class="fa-solid fa-bars" onclick="closeMenu()"></i>
         </ul>
         <i class="fa-solid fa-bars" onclick="openMenu()"></i>
@@ -67,29 +68,31 @@
             </div>
 
             <div class="project-col-2">
-                <h1>Description</h1>
-                <h3 class="main-description">
-                    Don't Feed The Duck is a platformer set in a city with a bakery. Our duck wants to get into the bakery for their favorite snacks. Break into the bakery and escape with your bread!<br>This game was made for my 'Game Design Fundamentals' class in the 2023 Fall Semester.
-                </h3>
-
-                <h2 class="team-members"><b>Team:</b> Alexander Costley, Jacob Berman, Aiden Morrison, Gage Delgado
-                </h2>
-                <h2 class="role">
-                    <b>Role:</b> Programmer, Level Designer, Gameplay Designer
-                </h2>
-
+              <h2 class="team-members"><b>Team:</b> Alexander Costley, Jacob Berman, Aiden Morrison, Gage Delgado
+              </h2>
+              <h2 class="role">
+                <b>Role:</b> Programmer, Level Designer, Gameplay Designer
+              </h2>
+              <h3 class="updated">Last Updated: July 2, 2024</h3>
+                <h3 class="project-links">Link(s): <a href="https://legendarybanana.itch.io/dont-feed-the-duck" target="_blank">itch.io</a>
+              </h3>
+              <h1>Description</h1>
+              <h3 class="main-description">
+                  Don't Feed The Duck is a platformer set in a city with a bakery. Our duck wants to get into the bakery for their favorite snacks. Break into the bakery and escape with your bread!<br>This game was made for my 'Game Design Fundamentals' class in the 2023 Fall Semester.
+              </h3>
                 <h1>Contributions</h1>
                 <h3 class="contributions">
-                    - Main programmer on the project<br><br>
-                    - Designed the 2nd level of the chase scene <br><br>
-                    - Implemented all art assets <br><br>
-                    - Designed unique mechanics like a moving cart, bounce pads, and a crazy temporary speed boost on collecting items
+                    - Main programmer on the project<br>
+                    - Designed the 2nd level of the chase scene <br>
+                    - Implemented all art assets <br>
+                    - Designed unique mechanics like a moving cart, bounce pads, and a crazy temporary speed boost on collecting items <br>
+                    - Learned how to create working settings menu for Unity
                 </h3>
             </div>
         </div>
     </div>
 
-    <div class="footer">
+    <div class="footer-project">
         <p>Made with <i class="fa-solid fa-heart"></i> by Jason Chen </p>
     </div>
     <script>
