--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,7 @@
                 <div class="nested-dropdown-content nested-dropdown-software">
                   <a href="RiotStatsProject.html">LoL Stats Tool</a>
                   <a href="TicTacToeProject.html">TicTacToe Variats GUI</a>
+                  <a href="bingoGenerator.html">Custom Bingo Generator</a>
                 </div>
               </div>
             </div>
@@ -104,6 +105,13 @@
                 <a href="TicTacToeProject.html">
                   <h1><u>TicTacToe Varients</u></h1>
                   <img src="images/tictactoeMenu.png">
+                </a>
+              </div>
+              <!-- Bingo Generator -->
+              <div class="work" id="bingoGenerator">
+                <a href="bingoGenerator.html">
+                  <h1><u>Custom Bingo Generator</u></h1>
+                  <img src="images/bingo main page.png">
                 </a>
               </div>
             </div>
