--- a/starboundwanderers.html
+++ b/starboundwanderers.html
@@ -37,12 +37,13 @@
                 <div class="nested-dropdown-content nested-dropdown-software">
                   <a href="RiotStatsProject.html">LoL Stats Tool</a>
                   <a href="TicTacToeProject.html">TicTacToe Variats GUI</a>
+                  <a href="bingoGenerator.html">Custom Bingo Generator</a>
                 </div>
               </div>
             </div>
           </li>
           <li><a href="images/Jason Chen - Resume (5_26_2024).pdf" target="_blank">Resume</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
           <i class="fa-solid fa-bars" onclick="closeMenu()"></i>
         </ul>
         <i class="fa-solid fa-bars" onclick="openMenu()"></i>
@@ -53,7 +54,7 @@
         <div class="project-container">
             <div class="project-col-1">
                 <h1 class="sub-title">Starbound Wanderers</h1>
-                <h3 class="sub-description">Work In Progress Game</h3>
+                <h3 class="sub-description">A Runaway Gay Space Fantasy Romance Gone Wrong!</h3>
                 <div class="gallery-container">
                     <div class="gallery-wrapper">
                       <div class="image-container-unreleased">
@@ -67,23 +68,23 @@
             </div>
 
             <div class="project-col-2">
-                <h1>Description</h1>
-                <h3 class="main-description">
-                    Starbound Wanderers is an isometric 2D RPG that follows Zhenyang and Kaveh, two gay lovers who have runaway from their planet to be together. They crash land on a foreign planet and maintain their relationship while surviving the wilderness of their new home.<br>This game is being developed under Studio Blue Jay. 
-                </h3>
-
-                <h2 class="team-members"><b>Team:</b> Studio Blue Jay
-                </h2>
-                <h2 class="role">
-                    <b>Role:</b> Programmer, Level Designer
-                </h2>
-
-                <h1>Contributions</h1>
-                <h3 class="contributions">
-                    - Designed the map and implemented all art assets<br><br>
-                    - Programmed how the UI functions for the player, the ability to switch characters and use different special attacks, a minimap, and fog of war <br><br>
-                    - Learned to work on a full team using PlasticSCM as source control and helped organize task for each people per week on the programming team<br><br>
-                </h3>
+              <h2 class="team-members"><b>Team:</b> Studio Blue Jay
+              </h2>
+              <h2 class="role">
+                  <b>Role:</b> Programmer, Level Designer
+              </h2>
+              <h3 class="updated">Last Updated: April 22, 2024</h3>
+              <h3 class="project-links">Link(s): Work In Progress
+              <h1>Description</h1>
+              <h3 class="main-description">
+                  Starbound Wanderers is an isometric 2D RPG that follows Zhenyang and Kaveh, two gay lovers who have runaway from their planet to be together. They crash land on a foreign planet and maintain their relationship while surviving the wilderness of their new home.<br>This game is being developed under Studio Blue Jay. 
+              </h3>
+              <h1>Contributions</h1>
+              <h3 class="contributions">
+                  - Designed the map and implemented all art assets<br>
+                  - Programmed how the UI functions for the player, the ability to switch characters and use different special attacks, a minimap, and fog of war <br>
+                  - Learned to work on a full team using PlasticSCM as source control and helped organize task for each people per week on the programming team<br>
+              </h3>
             </div>
         </div>
     </div>
