--- a/bellicose.html
+++ b/bellicose.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jason Chen Portfolio</title>
     <link rel="icon" type="image/png" href="images/BANANA_MILK.png">
     <link rel="stylesheet" href="styles.css">
@@ -68,13 +68,13 @@
             </div>
 
             <div class="project-col-2">
-              <h2 class="team-members"><b>Team:</b> Blake Shea, Sean McDowell, Anthony Pansenko, Liam Quinn
+              <h2 class="team-members"><u>Team:</u> Blake Shea, Sean McDowell, Anthony Pansenko, Liam Quinn
               </h2>
               <h2 class="role">
-                Role: Programmer, UI/UX
+                <u>Role:</u> Programmer, UI/UX
               </h2>
-              <h3 class="updated">Last Updated: April 13, 2024</h3>
-                <h3 class="project-links">Link(s): Itch.io link coming soon
+              <h3 class="updated"><u>Last Updated:</u> April 13, 2024</h3>
+                <h3 class="project-links"><u>Link(s):</u> Itch.io link coming soon
                 <h1>Description</h1>
                 <h3 class="main-description">
                     Bellicose is a 2D fighting game utilizing a pixel art style and implements typical fighting game mechanics such as different height blocks/attacks, staggering attacks, different special abilities between characters, and more to pit two players against each other in a skill based combat system.<br>This game was created for the Clark University IGDA Feburary Game Jam with the theme "Retro"
@@ -88,9 +88,8 @@
             </div>
         </div>
     </div>
-
     <div class="footer-project">
-        <p>Made with <i class="fa-solid fa-heart"></i> by Jason Chen </p>
+      <p>Made with <i class="fa-solid fa-heart"></i> by Jason Chen </p>
     </div>
     <script>
         function scrollImages(direction) {
