--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     </nav>
     <div class="header-row">
       <div class="header-text">
-        <h1>Hi. I'm Jason Chen.</h1>
-        <p>I'm a student game developer, specializing in game programming.
+        <h1>Hi. I'm Jason Chen</h1>
+        <p>I'm a student game developer, specializing in game programming. I also work on other programming projects that are not game related such as software development projects or web development.
           <br><br>
            Check out the projects I have worked on below and feel free to
            contact me if you would like to collaborate on a project !!
@@ -82,9 +82,9 @@
       </div>
     </div>
   </div>
-  <div class="footer">
-    <p>Made with <i class="fa-solid fa-heart"></i> by Jason Chen </p>
-  </div>
+    <div class="footer">
+      <p>Made with <i class="fa-solid fa-heart"></i> by Jason Chen </p>
+    </div>
 </div>
 
 
