--- a/starboundwanderers.html
+++ b/starboundwanderers.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jason Chen Portfolio</title>
     <link rel="icon" type="image/png" href="images/BANANA_MILK.png">
     <link rel="stylesheet" href="styles.css">
