--- a/dontfeedduck.html
+++ b/dontfeedduck.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/6e0977d2a0.js" crossorigin="anonymous"></script>
 </head>
-<body class="main-content">
+<body class="main-content-project">
     <div class="container-navbar">
       <nav>
         <img src="images/BANANAS.png" class="logo">
