added github link to tic-tac-toe project

--- a/TicTacToeProject.html
+++ b/TicTacToeProject.html
@@ -75,7 +75,7 @@
                 <b>Role:</b> Programmer
               </h2>
               <h3 class="updated">Last Updated: June 25, 2024</h3>
-              <h3 class="project-links">Link(s): Github Link Coming Soon
+              <h3 class="project-links">Link(s): <a href="https://github.com/jychen0/TicTacToeVariants" target="_blank">github</a>
               <h1>Description</h1>
               <h3 class="main-description">
                   This project creates a GUI using the Java Swing Library to play tic tac toe gamemodes. You are able to play regular tic tac toe, ultimate tic tac toe, against an unbeatable AI, and a 3-at-a-time tic tac toe. A version I came up with in my freshman year of high school. This project stemmed from being bored in my junior year high school computer science class and has since added a GUI and other modes.
