Added Pictures to Game Pages

--- a/EscapeAlexBank.html
+++ b/EscapeAlexBank.html
@@ -59,6 +59,7 @@
                     <div class="gallery-wrapper">
                       <div class="image-container">
                         <img src="images/Escape_Alex_Bank_Start.png" alt="EscapeAlexBank Start Screen">
+                        <img src="images/Escape_Level2.png" alt="Level 2 of Escape Alex Bank">
                         <!-- Add more images as needed -->
                       </div>
                     </div>
