--- a/bellicose.html
+++ b/bellicose.html
@@ -59,6 +59,8 @@
                     <div class="gallery-wrapper">
                       <div class="image-container">
                         <img src="images/Bellicose_Start.png" alt="Bellicose Start Screen">
+                        <img src="images/Bellicose_Character_Select.png" alt="Bellicose Character Select Screen">
+                        <img src="images/Bellicose_Fight.png" alt="Bellicose Fight Scene">
                         <!-- Add more images as needed -->
                       </div>
                     </div>
