--- a/dontfeedduck.html
+++ b/dontfeedduck.html
@@ -59,6 +59,14 @@
                     <div class="gallery-wrapper">
                       <div class="image-container">
                         <img src="images/Duck_Game_Start.png" alt="DontFeedDuck  Start Screen">
+                        <img src="images/Duck_Game_Bakery.png" alt="Duck In front of Bakery">
+                        <img src="images/Duck_Game_Chase.png" alt="DontFeedTheDuck Stage 2">
+                        <img src="images/Duck_Game_Difficulty.png" alt="Difficult Selector Screen">
+                        <img src="images/Duck_Game_End.png" alt="Ending of DontFeedTheDuck">
+                        <img src="images/Duck_Game_Glider.png" alt="Duck using Glider powerup">
+                        <img src="images/Duck_Game_Pause.png" alt="Pause Screen">
+                        <img src="images/Duck_Game_Settings.png" alt="Settings Screen">
+                        <img src="images/Duck_Game_Uber.png" alt="Taxi Back to Start Mechanic">
                         <!-- Add more images as needed -->
                       </div>
                     </div>
