--- a/starboundwanderers.html
+++ b/starboundwanderers.html
@@ -57,7 +57,7 @@
                 <h3 class="sub-description">A Runaway Gay Space Fantasy Romance Gone Wrong!</h3>
                 <div class="gallery-container">
                     <div class="gallery-wrapper">
-                      <div class="image-container-unreleased">
+                      <div class="image-container">
                         <img src="images/starbound_wanderers.png">
                         <!-- Add more images as needed -->
                       </div>
@@ -71,7 +71,7 @@
               <h2 class="team-members"><b>Team:</b> Studio Blue Jay
               </h2>
               <h2 class="role">
-                  <b>Role:</b> Programmer, Level Designer
+                  <b>Role:</b> Programmer, Designer
               </h2>
               <h3 class="updated">Last Updated: April 22, 2024</h3>
               <h3 class="project-links">Link(s): Work In Progress
