--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,7 @@
                   <a href="bellicose.html">Bellicose</a>
                   <a href="dontfeedduck.html">Don't Feed The Duck</a>
                   <a href="EscapeAlexBank.html">Escape Alex Bank</a>
+                  <a href="SnoozeOrLooze.html">SnoozeOrLooze</a>
                   <a href="starboundwanderers.html">Starbound Wanderers</a>
                   <a href="sunnysidetravels.html">Sunnyside Travels</a>
                 </div>
@@ -42,7 +43,7 @@
               </div>
             </div>
           </li>
-          <li><a href="images/Jason Chen - Resume (5_26_2024).pdf" target="_blank">Resume</a></li>
+          <li><a href="OtherFiles/Jason Chen - Resume (9_19_2024).pdf" target="_blank">Resume</a></li>
           <li><a href="index.html#contact">Contact</a></li>
           <i class="fa-solid fa-bars" onclick="closeMenu()"></i>
         </ul>
@@ -74,6 +75,13 @@
                 <a href="EscapeAlexBank.html">
                   <h1><u>Escape Alex Bank</u></h1>
                   <img src="images/Escape_Alex_Bank_Start.png">
+                </a>
+              </div>
+              <!-- Snooze Or Looze -->
+              <div class="work" id="snoozeOrLooze">
+                <a href="SnoozeOrLooze.html">
+                  <h1><u>SnoozeOrLooze</u></h1>
+                  <img src="images/SnoozeOrLoozeTitle.png">
                 </a>
               </div>
               <!-- Starbound Wanderers-->
