--- a/EscapeAlexBank.html
+++ b/EscapeAlexBank.html
@@ -28,6 +28,7 @@
                   <a href="bellicose.html">Bellicose</a>
                   <a href="dontfeedduck.html">Don't Feed The Duck</a>
                   <a href="EscapeAlexBank.html">Escape Alex Bank</a>
+                  <a href="SnoozeOrLooze.html">SnoozeOrLooze</a>
                   <a href="starboundwanderers.html">Starbound Wanderers</a>
                   <a href="sunnysidetravels.html">Sunnyside Travels</a>
                 </div>
@@ -42,7 +43,7 @@
               </div>
             </div>
           </li>
-          <li><a href="images/Jason Chen - Resume (5_26_2024).pdf" target="_blank">Resume</a></li>
+          <li><a href="OtherFiles/Jason Chen - Resume (9_19_2024).pdf" target="_blank">Resume</a></li>
           <li><a href="index.html#contact">Contact</a></li>
           <i class="fa-solid fa-bars" onclick="closeMenu()"></i>
         </ul>
