--- a/SnoozeOrLooze.html
+++ b/SnoozeOrLooze.html
@@ -48,26 +48,18 @@
           <i class="fa-solid fa-bars" onclick="closeMenu()"></i>
         </ul>
         <i class="fa-solid fa-bars" onclick="openMenu()"></i>
-      </nav>
+      </nav>  
     </div>
 
     <div class="project">
         <div class="project-container">
             <div class="project-col-1">
-                <h1 class="sub-title">Don't Feed The Duck</h1>
-                <h3 class="sub-description">Ducks sure do love bread!</h3>
+                <h1 class="sub-title">Snooze Or Looze</h1>
+                <h3 class="sub-description">Don't wanna wake up? Debate your alarm clock!</h3>
                 <div class="gallery-container">
                     <div class="gallery-wrapper">
                       <div class="image-container">
-                        <img src="images/Duck_Game_Start.png" alt="DontFeedDuck  Start Screen">
-                        <img src="images/Duck_Game_Bakery.png" alt="Duck In front of Bakery">
-                        <img src="images/Duck_Game_Chase.png" alt="DontFeedTheDuck Stage 2">
-                        <img src="images/Duck_Game_Difficulty.png" alt="Difficult Selector Screen">
-                        <img src="images/Duck_Game_End.png" alt="Ending of DontFeedTheDuck">
-                        <img src="images/Duck_Game_Glider.png" alt="Duck using Glider powerup">
-                        <img src="images/Duck_Game_Pause.png" alt="Pause Screen">
-                        <img src="images/Duck_Game_Settings.png" alt="Settings Screen">
-                        <img src="images/Duck_Game_Uber.png" alt="Taxi Back to Start Mechanic">
+                        <img src="images/SnoozeOrLoozeTitle.png" alt="SnoozeOrLooze Title Image">
                         <!-- Add more images as needed -->
                       </div>
                     </div>
@@ -77,26 +69,24 @@
             </div>
 
             <div class="project-col-2">
-              <h2 class="team-members"><b>Team:</b> Alexander Costley, Jacob Berman, Aiden Morrison, Gage Delgado
+              <h2 class="team-members"><b>Team:</b> Ren Grunberg, Thomas Heffernan, Marietta I Rivera Sigmann, Anthony Panasenko, Jared Cocomazzi
               </h2>
               <h2 class="role">
-                <b>Role:</b> Programmer, Level Designer, Gameplay Designer
+                  <b>Role:</b> Programmer
               </h2>
-              <h3 class="updated">Last Updated: July 2, 2024</h3>
-                <h3 class="project-links">Link(s): <a href="https://legendarybanana.itch.io/dont-feed-the-duck" target="_blank">itch.io</a>
-              </h3>
+              <h3 class="updated">Last Updated: September 21, 2024</h3>
+              <h3 class="project-links">Link(s): <a href="https://legendarybanana.itch.io/snooze-or-looze" target="_blank">itch.io</a></h3>
               <h1>Description</h1>
               <h3 class="main-description">
-                  Don't Feed The Duck is a platformer set in a city with a bakery. Our duck wants to get into the bakery for their favorite snacks. Break into the bakery and escape with your bread!<br>This game was made for my 'Game Design Fundamentals' class in the 2023 Fall Semester.
+                  SnoozeOrLooze is a debate visual novel game similar to Ace Attorney but mixed in with a card game. Play as Derek and collect arguments that will then be used to debate a clock on whether you need to wake up or not. Good arguments will lead to an ending of Derek going back to sleep while bad arguments will force Derek to wake up.
               </h3>
-                <h1>Contributions</h1>
-                <h3 class="contributions">
-                    - Main programmer on the project<br>
-                    - Designed the 2nd level of the chase scene <br>
-                    - Implemented all art assets <br>
-                    - Designed unique mechanics like a moving cart, bounce pads, and a crazy temporary speed boost on collecting items <br>
-                    - Learned how to create working settings menu for Unity
-                </h3>
+
+              <h1>Contributions</h1>
+              <h3 class="contributions">
+                  - Sole programmer on the team. <br>
+                  - Led a team of people who were new to game jams <br>
+                  - Designed the card game concept to make the debate visual novel type game more interactive and replayable
+              </h3>
             </div>
         </div>
     </div>
